remove code blocks from headers

--- a/src/docs/guide/1. Introduction.md
+++ b/src/docs/guide/1. Introduction.md
@@ -9,7 +9,7 @@ The _Fields plugin_ allows you to customize the rendering of input fields for pr
 
 ## Tags
 
-### `f:input` and `f:field`
+### f:input and f:field
 
 `f:input` renders an appropriate input for a property, for example an `<input type="text">` element for a _String_ property or a `<select>` for an enum.
 
@@ -39,7 +39,7 @@ label
 labelKey
 : Overrides the field label passed to the template using a message from an i18n bundle.
 
-### `f:all`
+### f:all
 
 Renders fields for all properties of an object by using `f:field` for each property.
 
@@ -60,7 +60,7 @@ bean (_required_ if not inside `f:with`)
 except
 : A comma-separated list of properties that should be skipped (in addition to the defaults).
 
-### `f:with`
+### f:with
 
 Places a bean in scope so that the bean attribute can be omitted on contained tags. For example:
 
