github markdown doesn't support definition lists

--- a/src/docs/guide/1. Introduction.md
+++ b/src/docs/guide/1. Introduction.md
@@ -22,22 +22,14 @@ The _Fields plugin_ allows you to customize the rendering of input fields for pr
 
 Both tags share the same exact set of attributes:
 
-bean (_required_ if not inside `f:with`)
-: The bean whose property is being rendered. This can be the object itself or the name of a page-scope variable.
-property (_required_)
-: The path to the property. This can include any level of nesting and numeric or string indexes. For example `employees[0].address[home].street` is a valid path.
-value
-: Overrides the actual value of the property.
-default
-: A default value for the property that will be used if the actual property value is _falsy_.
-required
-: Overrides the required status of the property. By default this is worked out based on the property's constraints.
-invalid
-: Overrides the validity of the property. By default this is worked out using the bean's _errors_ property for domain and command objects.
-label
-: Overrides the field label passed to the template.
-labelKey
-: Overrides the field label passed to the template using a message from an i18n bundle.
+**bean (_required_ if not inside `f:with`)**: The bean whose property is being rendered. This can be the object itself or the name of a page-scope variable.
+**property (_required_)**: The path to the property. This can include any level of nesting and numeric or string indexes. For example `employees[0].address[home].street` is a valid path.
+**value**: Overrides the actual value of the property.
+**default**: A default value for the property that will be used if the actual property value is _falsy_.
+**required**: Overrides the required status of the property. By default this is worked out based on the property's constraints.
+**invalid**: Overrides the validity of the property. By default this is worked out using the bean's _errors_ property for domain and command objects.
+**label**: Overrides the field label passed to the template.
+**labelKey**: Overrides the field label passed to the template using a message from an i18n bundle.
 
 ### f:all
 
@@ -55,10 +47,8 @@ Embedded properties are included with a surrounding _fieldset_. For example if y
 		<f:field bean="person" property="address.country"/>
 	</fieldset>
 
-bean (_required_ if not inside `f:with`)
-: The bean whose property is being rendered. This can be the object itself or the name of a page-scope variable.
-except
-: A comma-separated list of properties that should be skipped (in addition to the defaults).
+**bean (_required_ if not inside `f:with`)**: The bean whose property is being rendered. This can be the object itself or the name of a page-scope variable.
+**except**: A comma-separated list of properties that should be skipped (in addition to the defaults).
 
 ### f:with
 
@@ -69,8 +59,7 @@ Places a bean in scope so that the bean attribute can be omitted on contained ta
 		<f:field property="address.city"/>
 	</f:with>
 
-bean (_required_)
-: The bean whose property is being rendered. This can be the object itself or the name of a page-scope variable.
+**bean (_required_)**: The bean whose property is being rendered. This can be the object itself or the name of a page-scope variable.
 
 ## Overriding rendering
 
