add docs for variables used in template resolution

--- a/src/docs/guide/1. Introduction.md
+++ b/src/docs/guide/1. Introduction.md
@@ -24,14 +24,14 @@ The _Fields plugin_ allows you to customize the rendering of input fields for pr
 
 Both tags share the same exact set of attributes:
 
-* **bean (_required_ if not inside `f:with`)**: The bean whose property is being rendered. This can be the object itself or the name of a page-scope variable.  
-* **property (_required_)**: The path to the property. This can include any level of nesting and numeric or string indexes. For example `employees[0].address[home].street` is a valid path.  
-* **value**: Overrides the actual value of the property.  
-* **default**: A default value for the property that will be used if the actual property value is _falsy_.  
-* **required**: Overrides the required status of the property. By default this is worked out based on the property's constraints.  
-* **invalid**: Overrides the validity of the property. By default this is worked out using the bean's _errors_ property for domain and command objects.  
-* **label**: Overrides the field label passed to the template.  
-* **labelKey**: Overrides the field label passed to the template using a message from an i18n bundle.  
+* **bean (_required_ if not inside `f:with`)**: The bean whose property is being rendered. This can be the object itself or the name of a page-scope variable.
+* **property (_required_)**: The path to the property. This can include any level of nesting and numeric or string indexes. For example `employees[0].address[home].street` is a valid path.
+* **value**: Overrides the actual value of the property.
+* **default**: A default value for the property that will be used if the actual property value is _falsy_.
+* **required**: Overrides the required status of the property. By default this is worked out based on the property's constraints.
+* **invalid**: Overrides the validity of the property. By default this is worked out using the bean's _errors_ property for domain and command objects.
+* **label**: Overrides the field label passed to the template.
+* **labelKey**: Overrides the field label passed to the template using a message from an i18n bundle.
 
 ### f:all
 
@@ -51,8 +51,8 @@ Embedded properties are included with a surrounding _fieldset_. For example if y
 
 #### Attributes
 
-* **bean (_required_ if not inside `f:with`)**: The bean whose property is being rendered. This can be the object itself or the name of a page-scope variable.  
-* **except**: A comma-separated list of properties that should be skipped (in addition to the defaults).  
+* **bean (_required_ if not inside `f:with`)**: The bean whose property is being rendered. This can be the object itself or the name of a page-scope variable.
+* **except**: A comma-separated list of properties that should be skipped (in addition to the defaults).
 
 ### f:with
 
@@ -65,22 +65,33 @@ Places a bean in scope so that the bean attribute can be omitted on contained ta
 
 #### Attributes
 
-* **bean (_required_)**: The bean whose property is being rendered. This can be the object itself or the name of a page-scope variable.  
+* **bean (_required_)**: The bean whose property is being rendered. This can be the object itself or the name of a page-scope variable.
 
 ## Overriding rendering
 
 The plugin resolves the GSP template used for each property according to conventions. You can override the rendering based on the class and property name or the property type. The `f:field` tag looks for a template called `_field.gsp` and the `f:input` tag looks for a template called `_input.gsp`. Both tags will look in the following locations in decreasing order of preference:
 
-1. `grails-app/views/forms/`_controllerName_`/`_propertyName_`/`
+1. `grails-app/views/`_controllerName_`/`_propertyName_`/`
 1. `grails-app/views/forms/`_class_`/`_propertyName_`/`
 1. `grails-app/views/forms/`_superclass_`/`_propertyName_`/`
 1. `grails-app/views/forms/`_propertyType_`/`
 1. `grails-app/views/forms/`_propertySuperclass_`/`
 1. `grails-app/views/forms/default/`
 
-Templates are resolved in this order so that you can override in the more specific circumstance and fall back to successively more general defaults. For example, you can define a field template for all _String_ properties but override a specific property of a particular class to use more specialized rendering.
+The variable referenced in these paths are:
 
-Templates in any of these locations in plugins are resolved as well. This means plugins such as _Joda Time_ can provide default rendering for special property types. A template in your application will take precedence over a template in a plugin at the same 'level'. For example if a plugin provides a `grails-app/views/forms/string/_input.gsp` the same template in your application will override it but if the plugin provides `grails-app/views/forms/person/name/_input.gsp` it would be used in preference to the more general template in your application.
+* **controllerName**: The name of the current controller (if any).
+* **class**: The bean class. For simple properties this is the class of the object passed to the _bean_ attribute of the _f:field_ or _f:input_ tag but when the _property_ attribute was nested this is the class at the end of the chain. For example, if the property path was _employees[0].address.street_ this will be the class of _address_.
+* **superclass**: Any superclass of _class_ up to but not including _java.lang.Object_.
+* **propertyName**: The property name at the end of the chain passed to the _property_ attribute of the _f:field_ or _f:input_ tag. For example, if the property path was _employees[0].address.street_ then this will be _street_.
+* **propertyType**: The type of the property at the end of the chain passed to the _property_ attribute of the _f:field_ or _f:input_ tag. For example, for a _java.lang.String_ property this would be _string_.
+* **propertySuperclass**: Any superclass of _propertyType_ up to but not including _java.lang.Object_.
+
+All class names are camel-cased simple forms. For example _java.lang.String_ = _string_, _com.project.HomeAddress_ = _homeAddress_.
+
+Templates are resolved in this order so that you can override in the more specific circumstance and fall back to successively more general defaults. For example, you can define a field template for all _java.lang.String_ properties but override a specific property of a particular class to use more specialized rendering.
+
+Templates in plugins are resolved as well. This means plugins such as _Joda Time_ can provide default rendering for special property types. A template in your application will take precedence over a template in a plugin at the same 'level'. For example if a plugin provides a `grails-app/views/forms/string/_input.gsp` the same template in your application will override it but if the plugin provides `grails-app/views/forms/person/name/_input.gsp` it would be used in preference to the more general template in your application.
 
 For most properties the out-of-the-box defaults should provide a good starting point.
 
