document parameters passed to templates

--- a/src/docs/guide/1. Introduction.md
+++ b/src/docs/guide/1. Introduction.md
@@ -115,13 +115,32 @@ and override the template `f:input` uses with any of these:
 1. `grails-app/views/forms/string/_input.gsp`
 1. `grails-app/views/forms/default/_input.gsp`
 
+### Template parameters
+
+The _f:field_ and _f:input_ tags will pass the following parameters to your templates:
+
+* **bean** (Object): The _bean_ attribute as passed to the _f:field_ or _f:input_ tag.
+* **property** (String): The _property_ attribute as passed to the _f:field_ or _f:input_ tag. This would generally be useful for the _name_ attribute of a form input.
+* **type** (Class): The property type.
+* **label** (String): The field label text. This is based on the _label_ or _labelKey_ attribute passed to the _f:field_ or _f:input_ tag. If those attributes were not used the label is resolved using '_class_._propertyName_`.label`' or defaulted to the natural property name.
+* **value** (Object): the property value. This can also be overridden or defaulted if the _value_ or _default_ attribute was passed to _f:field_ or _f:input_.
+* **constraints** (ConstrainedProperty): The constraints for the property if the bean is a domain or command object.
+* **persistentProperty** (GrailsDomainClassProperty): The persistent property object if the bean is a domain object.
+* **errors** (List<String>): The error messages for any field errors present on the property.
+* **required** (boolean): _true_ if the field is required, i.e. has a `nullable: false` or `blank: false` constraint.
+* **invalid** (boolean): _true_ if the property has any field errors.
+
+In addition _f:field_ passes the following parameters:
+
+* **widget** (String): The output of _f:input_ for the current bean and property.
+
 ## Scaffolding
 
-Scaffolding templates based on the _Form Fields_ plugin are quite powerful as they will pick up field and input rendering templates from your application and any plugins that provide them. This means that the useful life of scaffolding templates should be much longer as you do not need to replace the entire _create.gsp_ and/or _edit.gsp_ template just because you want to do something different with one particular field.
+Scaffolding templates based on the _Fields_ plugin are quite powerful as they will pick up field and input rendering templates from your application and any plugins that provide them. This means that the useful life of scaffolding templates should be much longer as you do not need to replace the entire _create.gsp_ and/or _edit.gsp_ template just because you want to do something different with one particular field.
 
 The plugin makes the _renderEditor.template_ file used by standard Grails scaffolding redundant. This template was very limited in that it could not be extended by plugins (only replaced) and was unable to support embedded properties of domain classes.
 
-The _Form Fields_ plugin includes scaffolding templates you can use in your application by running:
+The _Fields_ plugin includes scaffolding templates you can use in your application by running:
 
 	grails install-form-fields-templates
 
