#2 changed base views directory name to be consistent with plugin name

--- a/src/docs/guide/1. Introduction.md
+++ b/src/docs/guide/1. Introduction.md
@@ -72,11 +72,11 @@ Places a bean in scope so that the bean attribute can be omitted on contained ta
 The plugin resolves the GSP template used for each property according to conventions. You can override the rendering based on the class and property name or the property type. The _f:field_ tag looks for a template called `_field.gsp` and the _f:input_ tag looks for a template called `_input.gsp`. Both tags will look in the following locations in decreasing order of preference:
 
 1. `grails-app/views/`_controllerName_`/`_propertyName_`/`
-1. `grails-app/views/forms/`_class_`/`_propertyName_`/`
-1. `grails-app/views/forms/`_superclass_`/`_propertyName_`/`
-1. `grails-app/views/forms/`_propertyType_`/`
-1. `grails-app/views/forms/`_propertySuperclass_`/`
-1. `grails-app/views/forms/default/`
+1. `grails-app/views/fields/`_class_`/`_propertyName_`/`
+1. `grails-app/views/fields/`_superclass_`/`_propertyName_`/`
+1. `grails-app/views/fields/`_propertyType_`/`
+1. `grails-app/views/fields/`_propertySuperclass_`/`
+1. `grails-app/views/fields/default/`
 
 The variable referenced in these paths are:
 
@@ -91,7 +91,7 @@ All class names are camel-cased simple forms. For example _java.lang.String_ = _
 
 Templates are resolved in this order so that you can override in the more specific circumstance and fall back to successively more general defaults. For example, you can define a field template for all _java.lang.String_ properties but override a specific property of a particular class to use more specialized rendering.
 
-Templates in plugins are resolved as well. This means plugins such as _Joda Time_ can provide default rendering for special property types. A template in your application will take precedence over a template in a plugin at the same 'level'. For example if a plugin provides a `grails-app/views/forms/string/_input.gsp` the same template in your application will override it but if the plugin provides `grails-app/views/forms/person/name/_input.gsp` it would be used in preference to the more general template in your application.
+Templates in plugins are resolved as well. This means plugins such as _Joda Time_ can provide default rendering for special property types. A template in your application will take precedence over a template in a plugin at the same 'level'. For example if a plugin provides a `grails-app/views/fields/string/_input.gsp` the same template in your application will override it but if the plugin provides `grails-app/views/fields/person/name/_input.gsp` it would be used in preference to the more general template in your application.
 
 For most properties the out-of-the-box defaults should provide a good starting point.
 
@@ -102,18 +102,18 @@ Imagine an object of class _Employee_ that extends the class _Person_ and has a 
 You can override the template _f:field_ uses with any of these:
 
 1. `grails-app/views/`_controllerName_`/name/_field.gsp`
-1. `grails-app/views/forms/employee/name/_field.gsp`
-1. `grails-app/views/forms/person/name/_field.gsp`
-1. `grails-app/views/forms/string/_field.gsp`
-1. `grails-app/views/forms/default/_field.gsp`
+1. `grails-app/views/fields/employee/name/_field.gsp`
+1. `grails-app/views/fields/person/name/_field.gsp`
+1. `grails-app/views/fields/string/_field.gsp`
+1. `grails-app/views/fields/default/_field.gsp`
 
 and override the template _f:input_ uses with any of these:
 
 1. `grails-app/views/`_controllerName_`/name/_input.gsp`
-1. `grails-app/views/forms/employee/name/_input.gsp`
-1. `grails-app/views/forms/person/name/_input.gsp`
-1. `grails-app/views/forms/string/_input.gsp`
-1. `grails-app/views/forms/default/_input.gsp`
+1. `grails-app/views/fields/employee/name/_input.gsp`
+1. `grails-app/views/fields/person/name/_input.gsp`
+1. `grails-app/views/fields/string/_input.gsp`
+1. `grails-app/views/fields/default/_input.gsp`
 
 ### Template parameters
 
