Docs in progress. Added travis setup

--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -5,3 +5,11 @@
 :numbered:
 
 == Introduction
+
+include::introduction.adoc[]
+
+include::definitions/index.adoc[]
+
+include::configuration/index.adoc[]
+
+include::extending/index.adoc[]
