--- a/src/docs/asciidoc/definitions/index.adoc
+++ b/src/docs/asciidoc/definitions/index.adoc
@@ -15,7 +15,9 @@ Output is defined as a means for a user to view data. How this is represented is
 Context is defined as the markup that surrounds or is rendered alongside domain properties. There are several different contexts this module defines. All contexts are rendered by the LINKTOCONTEXTMARKUPRENDERER.
 
 
-==== ListOutputContext
+==== List Output Context
 
 Used to define how a list of domain class instances will be rendered. Examples are a table or a grid
+
+==== Output Context (Domain)
 
