--- a/src/docs/asciidoc/definitions/index.adoc
+++ b/src/docs/asciidoc/definitions/index.adoc
@@ -21,3 +21,5 @@ Used to define how a list of domain class instances will be rendered. Examples a
 
 ==== Output Context (Domain)
 
+==== Output Context (Property)
+
