--- a/src/docs/asciidoc/definitions/index.adoc
+++ b/src/docs/asciidoc/definitions/index.adoc
@@ -23,3 +23,4 @@ Used to define how a list of domain class instances will be rendered. Examples a
 
 ==== Output Context (Property)
 
+==== Input Context (Domain)
