--- a/src/docs/asciidoc/definitions/index.adoc
+++ b/src/docs/asciidoc/definitions/index.adoc
@@ -14,13 +14,31 @@ Output is defined as a means for a user to view data. How this is represented is
 
 Context is defined as the markup that surrounds or is rendered alongside domain properties. There are several different contexts this module defines. All contexts are rendered by the link:api/org/grails/scaffolding/markup/ContextMarkupRenderer.html[ContextMarkupRenderer].
 
-
 ==== List Output Context
 
-Used to define how a list of domain class instances will be rendered. Examples are a table or a grid
+The markup surrounding the display of a list of domain classes. Examples are a table or a grid.
 
 ==== Output Context (Domain)
 
+The markup surrounding the display of a domain class. An example is a container or ordered list.
+
 ==== Output Context (Property)
 
+The markup surrounding the display of an individual domain class property. An example is a row in a grid or a list item.
+
 ==== Input Context (Domain)
+
+The markup surrounding where a domain class will be created or modified. An example is a form.
+
+==== Input Context (Property)
+
+The markup surrounding the input of a domain class property. An example is a cell in a grid.
+
+==== Embedded Output Context
+
+The markup surrounding the input of the properties of an embedded domain class property. An example is a header.
+
+==== Embedded Input Context
+
+The markup surrounding the display of the properties of an embedded domain class property. An example is a fieldset.
+
