--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -10,6 +10,8 @@ include::introduction.adoc[]
 
 include::definitions/index.adoc[]
 
-include::configuration/index.adoc[]
+include::installation/index.adoc[]
+
+include::usage/index.adoc[]
 
 include::extending/index.adoc[]
