--- a/src/docs/asciidoc/definitions/index.adoc
+++ b/src/docs/asciidoc/definitions/index.adoc
@@ -42,3 +42,62 @@ The markup surrounding the input of the properties of an embedded domain class p
 
 The markup surrounding the display of the properties of an embedded domain class property. An example is a fieldset.
 
+=== Examples
+
+[source,xml,indent=1]
+----
+<form class="form-inline"> <1>
+    <div class="form-group"> <2>
+        <label for="exampleName2">Name</label>
+        <input type="text" class="form-control" id="exampleName2"> <3>
+    </div>
+    <div class="form-group"> <2>
+        <label for="exampleEmail2">Email</label>
+        <input type="email" class="form-control" id="exampleEmail2"> <3>
+    </div>
+    <fieldset> <4>
+        <legend>Address</legend>
+        <div class="form-group"> <2>
+            <label for="city">City</label>
+            <input type="text" class="form-control" id="city"> <3>
+        </div>
+    </fieldset>
+    <button type="submit" class="btn btn-default">Send invitation</button>
+</form>
+----
+<1> Input Context (Domain)
+<2> Input Context (Property)
+<3> Rendered Domain Property
+<4> Embedded Input Context
+
+
+[source,xml,indent=1]
+----
+<div class="container"> <1>
+    <div class="row">
+        <div class="col-sm-2">Name</div> <2>
+        <div class="col-sm-10">
+            ${user.name} <3>
+        </div>
+
+        <div class="col-sm-2">Age</div>
+        <div class="col-sm-10">
+            ${user.age} <3>
+        </div>
+
+        <div class="col-sm-2">Address</div> <4>
+        <div class="col-sm-10">
+            <div class="row-fluid">
+                <div class="col-sm-2">City</div> <2>
+                <div class="col-sm-10">
+                    ${user.address.city} <3>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+----
+<1> Output Context (Domain)
+<2> Output Context (Property)
+<3> Rendered Domain Property
+<4> Embedded Output Context
