Fix code highlighting in docs

--- a/src/docs/asciidoc/extending/index.adoc
+++ b/src/docs/asciidoc/extending/index.adoc
@@ -31,7 +31,7 @@ NOTE: The default attributes passed to `renderInput` are created by the link:api
 
 To register your renderer, inject the "domainInputRendererRegistry" bean and execute `registerDomainRenderer`, passing along your renderer and its priority.
 
-[source,groovy,subs="attributes",indent=1]
+[source,groovy,indent=1]
 ----
 DomainInputRendererRegistry domainInputRendererRegistry
 
@@ -51,7 +51,7 @@ Output renders must implement the link:api/org/grails/scaffolding/registry/Domai
 
 To register your renderer, inject the "domainOutputRendererRegistry" bean and execute `registerDomainRenderer`, passing along your renderer and its priority.
 
-[source,groovy,subs="attributes",indent=1]
+[source,groovy,indent=1]
 ----
 DomainOutputRendererRegistry domainOutputRendererRegistry
 
