--- a/src/docs/asciidoc/installation/index.adoc
+++ b/src/docs/asciidoc/installation/index.adoc
@@ -6,5 +6,5 @@ To start using this library, there are only a couple simple steps:
 [source,groovy,subs="attributes",indent=1]
 compile "org.grails:scaffolding-core:{version}"
 . Register the scaffolding core bean configuration link:api/org/grails/scaffolding/ScaffoldingBeanConfiguration.html[ScaffoldingBeanConfiguration]
-[source,groovy,subs="attributes",indent=1]
+[source,groovy,indent=1]
 scaffoldingBeanConfiguration(ScaffoldingBeanConfiguration)
