--- a/src/docs/asciidoc/usage/index.adoc
+++ b/src/docs/asciidoc/usage/index.adoc
@@ -2,7 +2,7 @@
 
 To render markup, inject the link:api/org/grails/scaffolding/markup/DomainMarkupRenderer.html[DomainMarkupRenderer].
 
-[source,groovy,subs="attributes",indent=1]
+[source,groovy,indent=1]
 DomainMarkupRenderer domainMarkupRenderer
 
 Then execute one of the methods provided:
@@ -15,7 +15,7 @@ A string containing all of the markup will be returned.
 
 Each of the methods requires a link:http://gorm.grails.org/latest/api/org/grails/datastore/mapping/model/PersistentEntity.html[PersistentEntity] that represents the given domain class. To retrieve the link:http://gorm.grails.org/latest/api/org/grails/datastore/mapping/model/PersistentEntity.html[PersistentEntity], inject the mapping context and pass in the fully qualified domain class name.
 
-[source,groovy,subs="attributes",indent=1]
+[source,groovy,indent=1]
 ----
 MappingContext grailsDomainClassMappingContext
 
