Convert docs to asciidoc

--- a/src/main/docs/guide/performance.adoc
+++ b/src/main/docs/guide/performance.adoc
@@ -6,8 +6,9 @@ Due to the flexibility needed during template development, this feature can be d
 
 For template development, the following configuration attribute should be placed in the development environment section of your application's Config.groovy:
 
-{code}
+[source,groovy]
+----
 grails.plugin.fields.disableLookupCache = true
-{code}
+----
 
 After the template development has finished, it is recommended to re-enable the template lookup cache in order to have a performant page rendering even during development.
