--- a/src/main/docs/guide/scaffolding.adoc
+++ b/src/main/docs/guide/scaffolding.adoc
@@ -4,10 +4,11 @@ The plugin makes the _renderEditor.template_ file used by standard Grails scaffo
 
 The _Fields_ plugin includes scaffolding templates you can use in your application by running:
 
-{code}
+[source,groovy]
+----
 grails install-form-fields-templates
-{code}
+----
 
-This will overwrite any _create.gsp_ and _edit.gsp_ files you have in @src/templates/scaffolding@.
+This will overwrite any _create.gsp_ and _edit.gsp_ files you have in `src/templates/scaffolding`.
 
 Alternatively, it's very easy to modify your existing scaffolding templates to use the _f:all_ tag or multiple _f:field_ tags.
