Back to snapshot

--- a/src/main/docs/guide/introduction.adoc
+++ b/src/main/docs/guide/introduction.adoc
@@ -11,27 +11,24 @@ The _Fields plugin_ allows you to customize the rendering of input fields for pr
 
 == Changelog
 
+=== Version 2.1.4
 
-=== Version 1.5
-
-
-_2015_04_26_
-
-* Changelog will be completed shortly. 
-
-WARNING: See <<usage,Usage>> and <<customizingFieldRendering,Customizing Field Rendering>> for breaking changes.
-
-https://github.com/grails-fields-plugin/grails-fields/issues?q=milestone%3A1.5+is%3Aclosed[Browse issues] 
-
+* Upgrade to Grails 3.2.8
+* Convert documentation to Asciidoc
 
 === Version 2.0
 
-
 * Redesign for Grails 3.0
 
+=== Version 1.5
+
+_2015_04_26_
+
+* See https://github.com/grails-fields-plugin/grails-fields/issues?q=milestone%3A1.5+is%3Aclosed[Browse issues] 
+
+WARNING: See <<usage,Usage>> and <<customizingFieldRendering,Customizing Field Rendering>> for breaking changes.
 
 === Version 1.4
-
 
 * Upgraded plugin to work with Grails 2.3.x (Issue #122)
 * Fixed missing property exception (Issue #134)
