--- a/src/main/docs/guide/embeddedProperties.adoc
+++ b/src/main/docs/guide/embeddedProperties.adoc
@@ -1,4 +1,4 @@
-Embedded properties are handled in a special way by the _f:field_ and _f:all_ tags. If the _property_ attribute you pass to _f:field_ is an embedded property then the tag recursively renders each individual property of the embedded class with a surrounding _fieldset_. For example if you have a _Person_ class with a _name_ property and an _Address_ embedded class with _street_, _city_ and _country_ properties `<f:field bean="person" property="address">` will effectively do this:
+Embedded properties are handled in a special way by the `f:field` and `f:all` tags. If the `property` attribute you pass to `f:field` is an embedded property then the tag recursively renders each individual property of the embedded class with a surrounding `fieldset`. For example if you have a `Person` class with a `name` property and an `Address` embedded class with `street`, `city` and `country` properties `<f:field bean="person" property="address">` will effectively do this:
 
 [source,groovy]
 ----
@@ -10,6 +10,6 @@ Embedded properties are handled in a special way by the _f:field_ and _f:all_ ta
 </fieldset>
 ----
 
-You can customize how embedded properties are surrounded by providing a layout at `grails-app/views/layouts/\_fields/embedded.gsp` which will override the default layout provided by the plugin.
+You can customize how embedded properties are surrounded by providing a layout at `grails-app/views/layouts/_fields/embedded.gsp` which will override the default layout provided by the plugin.
 
-When you use the _f:all_ tag it will automatically handle embedded properties in this way.
+When you use the `f:all` tag it will automatically handle embedded properties in this way.
