--- a/src/main/docs/guide/introduction.adoc
+++ b/src/main/docs/guide/introduction.adoc
@@ -19,6 +19,7 @@ The _Fields plugin_ allows you to customize the rendering of input fields for pr
 
 * Upgrade to Grails 3.2.8
 * Convert documentation to Asciidoc
+* Add support for themes
 
 === Version 2.0
 
