--- a/src/main/docs/guide/introduction.adoc
+++ b/src/main/docs/guide/introduction.adoc
@@ -15,6 +15,8 @@ The _Fields plugin_ allows you to customize the rendering of input fields for pr
 
 * Conversion to the Mapping Context API. Usages of the GrailsDomainClass and GrailsDomainClassProperty classes have been removed. If you extend a template that relies on those classes, they have been replaced with link:http://gorm.grails.org/latest/hibernate/api/org/grails/datastore/mapping/model/PersistentEntity.html[PersistentEntity] and link:http://grails.github.io/scaffolding/latest/api/org/grails/scaffolding/model/property/DomainProperty.html[DomainProperty] respectively.
 
+* Conversion of constraints to a common implementation between grails.validation and grails.gorm.validation. See link:http://grails.github.io/scaffolding/latest/api/org/grails/scaffolding/model/property/Constrained.html[Constrained].
+
 === Version 2.1.4
 
 * Upgrade to Grails 3.2.8
