--- a/src/main/docs/guide/introduction.adoc
+++ b/src/main/docs/guide/introduction.adoc
@@ -8,8 +8,36 @@ The _Fields plugin_ allows you to customize the rendering of input fields for pr
 * Enable other plugins to provide field rendering for special property types that gets picked up automatically (e.g. the _Joda Time_ plugin can provide templates for the various date/time types).
 * Support embedded properties of _GORM_ domain classes.
 
-
 == Changelog
+
+=== Version 2.2.6
+
+* Improvement: Documentation of `maxProperties` on `<f:table/>`
+* Improvement: `<f:table\>` can now show `id`, `lastUpdated` and `dateCreated` (see link:../ref/Tags/table.html[f:table] doc). Injecting `DomainModelService` instead of instantiating `DomainModelServiceImpl` in `FormsFieldTagLib` (Issue https://github.com/grails-fields-plugin/grails-fields/issues/257[#257])
+
+https://github.com/grails-fields-plugin/grails-fields/compare/v2.2.5...v2.2.6[GitHub diff]
+
+=== Version 2.2.4/2.2.5
+* Improvement: Introduced `maxProperties` attribute to `<f:table/>`
+* Improvement: Render value that is an association but not to a grom entity
+* Improvement: Rendering numbers is now Locale-aware (can be configured)
+
+https://github.com/grails-fields-plugin/grails-fields/compare/v2.2.3...v2.2.5[GitHub diff]
+
+=== Version 2.2.3
+* Bug-fix: Another issue with old API
+
+https://github.com/grails-fields-plugin/grails-fields/compare/v2.2.2...v2.2.3[GitHub diff]
+
+=== Version 2.2.2
+* Bug-fix: Fix issue with oneToMany expecting the old API
+
+https://github.com/grails-fields-plugin/grails-fields/compare/v2.2.1...v2.2.2[GitHub diff]
+
+=== Version 2.2.1
+* Bug-fix: Autowire beans
+
+https://github.com/grails-fields-plugin/grails-fields/compare/v2.2.0...v2.2.1[GitHub diff]
 
 === Version 2.2.0
 
@@ -17,11 +45,15 @@ The _Fields plugin_ allows you to customize the rendering of input fields for pr
 
 * Conversion of constraints to a common implementation between grails.validation and grails.gorm.validation. See link:http://grails.github.io/scaffolding/latest/api/org/grails/scaffolding/model/property/Constrained.html[Constrained].
 
+https://github.com/grails-fields-plugin/grails-fields/compare/v2.1.4...v2.2.0[GitHub diff]
+
 === Version 2.1.4
 
 * Upgrade to Grails 3.2.8
 * Convert documentation to Asciidoc
 * Add support for themes
+
+https://github.com/grails-fields-plugin/grails-fields/compare/v2.1.1...v2.1.4[GitHub diff from 2.1.1 to 2.1.4]
 
 === Version 2.0
 
