--- a/src/main/docs/ref/Tags/table.adoc
+++ b/src/main/docs/ref/Tags/table.adoc
@@ -6,7 +6,7 @@
 ===== Description
 
 
-_f:table_ renders some or all properties of a collection of beans in a table using the _f:display_ widget for each property type. If there is no _\_display_ template in scope the tag will simply render the property values.
+`<f:table/>` renders some or all properties of a collection of beans in a table using the _f:display_ widget for each property type. If there is no _\_display_ template in scope the tag will simply render the property values.
 
 ===== Examples
 
@@ -14,14 +14,27 @@ _f:table_ renders some or all properties of a collection of beans in a table usi
 ----
 <f:table collection="personList"/>
 
+<f:table collection="personList" properties="firstName, lastName"/>
+
 <f:table collection="personList" properties="['firstName', 'lastName']"/>
 
 <f:table collection="catsAndDogsList" domainClass="org.zoo.Animal"/>
 
 <f:table collection="catsAndDogsList" domainClass="org.zoo.Animal" theme="bs-horizontal"/>
 
+// List first three properties in Person
 <f:table collection="personList" maxProperties="3"/>
 
+// Include id, lastUpdated, dateCreated
+<f:table collection="personList" except="[]]"/>
+
+----
+
+The template for `<f:table/>` should be in
+
+[source]
+----
+grails-app/views/templates/_fields/_table.gsp
 ----
 
 When *theme* is specified, the _\_display_ template will be searched first in *theme*.
@@ -32,13 +45,13 @@ When *theme* is specified, the _\_display_ template will be searched first in *t
 |===
 |*Name*|*Required?*|*Default*|*Description*
 |*collection*|yes||The collection of beans to be displayed
-|*domainClass*|||The FQN of the domain class of the elements in the collection. Defaults to the class of the first element in the collection.
-|*properties*|||The list of properties to be shown (table columns). Defaults to the first 7 (or less) properties of the domain class ordered by the domain class' constraints.
+|*domainClass*||`Class` of first element in `collection`|The FQN of the domain class of the elements in the collection.
+|*properties*||First 7 (or less)|Comma-separated `String` or `List` of properties to be shown (table columns).  Defaults to the first 7 (or less) properties of the domain class ordered by the domain class' `constraints`, unless `maxProperties` is set below
 |*displayStyle*|||Determines the display template used for the bean's properties. Defaults to _table_ meaning that _\_display-table_ templates will be used when available.
-|*except*|||A comma-separated list of properties that should be skipped.
-|*order*|||A comma-separated list of properties which represents the order in which the tag should display them.
+|*except*||`['id', 'lastUpdated', 'dateCreated']`|A comma-separated `String` or `List` of properties that should be skipped. Use the empty list to include `id`, `lastUpdated` and `dateCreated`
+|*order*|||Comma-separated `String` or `List` of properties which represents the order in which the tag should display them.
 |*theme*|String||Theme to use if available.
-|*maxProperties*|Number|7|The maximum number of properties to display when rendering the table. If zero is specified\| all columns are shown, otherwise `properties[0..<maxProperties]` are shown, which means `maxProperties` can be negative.
+|*maxProperties*|Number|7|The maximum number of properties to display when rendering the table. If zero is specified all columns are shown, otherwise `properties[0..<maxProperties]` are shown. `maxProperties` can be negative.
 |===
 
  Any additional attributes are passed to the rendered template.
